# marketing-campaign-engine

./: .gitignore  LICENSE  README.md  config.py  main.py  marketing_campaign.py  pyproject.toml  settings.cfg
docs/: Final Project Proposal.docx  Project Check.docx  archtecture.md  template.py
src/: config.py
src/marketing_engine/: config.py  main.py
src/marketing_engine/domain/: merch_item.py
src/marketing_engine/gui/: analytics_view.py  app.py  campaign_view.py  history_view.py
src/marketing_engine/persistence/: merch_repository.py  restock_repository.py
src/marketing_engine/routing/: process_router.py
src/marketing_engine/services/: analytics_service.py  batch_service.py  forcasting_service.py  marketing_service.py  safety_stock_service.py
